--- a/AspNetMvcApp/Views/Course/MyView.cshtml
+++ b/AspNetMvcApp/Views/Course/MyView.cshtml
@@ -15,8 +15,9 @@
 <body>
     @ViewBag.Greeting student, How are you ?
     <p>
-        Hope,you will enjoy the course .
+        Hope,you will enjoy the course . 
     </p>
+    <a asp-action="apply">Apply the course </a>
 </body>
 </html>
 
